After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 660732 - Segmentation fault with nouveau mesa driver
Segmentation fault with nouveau mesa driver
Status: RESOLVED FIXED
Product: clutter-gst
Classification: Other
Component: general
1.4.x
Other Linux
: Normal critical
: ---
Assigned To: clutter-gst-maint
clutter-gst-maint
Depends on:
Blocks:
 
 
Reported: 2011-10-03 00:44 UTC by Balló György
Modified: 2011-10-03 11:12 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix segmentation fault with nouveau mesa driver (1.38 KB, patch)
2011-10-03 00:46 UTC, Balló György
none Details | Review

Description Balló György 2011-10-03 00:44:08 UTC
A recent commit[1] breaks video playback on systems that uses the nouveau classic mesa driver. When I start playing video in totem or sushi, I get an immediate segfault. I created a fix, which partially reverts this commit (see below).

[1] http://git.gnome.org/browse/clutter-gst/commit/?id=f92a80288a57cc0fbc58a74e3a143b7318649557
Comment 1 Balló György 2011-10-03 00:46:55 UTC
Created attachment 198050 [details] [review]
Fix segmentation fault with nouveau mesa driver
Comment 2 Damien Lespiau 2011-10-03 11:12:05 UTC
Ooops, that is embarrassing. The bug is that you need to ask for the right type
with gst_structure_get_$type() and the masks are ints.

I did not see it because:

1/ I'm mainly testing with media-explorer and we make sure to have a pipeline
that gives YUV frames to the sink, It'd be nice to do the color space
conversion with the GPU for totem and sushi as well probably.

2/ I did not run the interactive tests, really need to make them non
interactive and part of a check target

anyway thanks for the patch, applied, I will release a 1.4.2 version today.