video-sink: Fix segmentation fault with nouveau mesa driver

Partially revert commit f92a80288a57cc0fbc58a74e3a143b7318649557
This fixes video playback on systems that uses the nouveau classic mesa driver.

You can't query an int field of a GstStructure as uint.

https://bugzilla.gnome.org/show_bug.cgi?id=660732